--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,8 @@
     "express": "^4.18.2",
     "fastest-validator": "^1.17.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
     "typescript": "^5.0.4",
     "uuid": "^9.0.0"
