--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.1",
+    "redis": "^4.6.7",
     "typescript": "^5.0.4",
     "uuid": "^9.0.0"
   },
