--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.1",
     "redis": "^4.6.7",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.1"
   }
 }
