--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hubspot/api-client": "^9.0.0",
     "@types/node": "^20.2.3",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/node-fetch": "^2.6.4",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.1"
   }
