--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon ./build/server.js"
+    "start": "npx tsc && npx nodemon ./build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.1",
+    "nodemon": "^3.0.1",
     "redis": "^4.6.7",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
